--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -23,6 +23,10 @@
             padding: 10px;
             width: calc(50% - 22px);
         }
+        button {
+            padding: 10px;
+            margin: 5px;
+        }
     </style>
 </head>
 <body>
@@ -34,6 +38,8 @@
         <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
         <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
         <button id="addQuoteButton">Add Quote</button>
+        <button id="exportQuotesButton">Export Quotes as JSON</button>
+        <input type="file" id="importFile" accept=".json" />
     </div>
 
     <script src="script.js"></script>
